# OpenGL-Playground

./: CMakeLists.txt  README.md  build.sh
include/debug/: GLDebugMessageCallback.cpp
libs/debug/: GLDebugMessageCallback.cpp
libs/glad/: glad.cpp
libs/glad/include/glad/: glad.h
libs/glm/: glm.cpp
libs/initialize/: initialize.cpp
libs/initialize/include/: initialize.h
libs/input/: physics.cpp
libs/input/include/: physics.h
libs/miniaudio/include/: miniaudio.h
libs/renderer/: renderer.cpp
libs/renderer/include/: renderer.h
libs/shaders/: shaders.cpp
libs/shaders/include/: shaders.h
res/shaders/: shader.frag  shader.vert
src/: main.cpp
